Added about page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
         <label for="lettersToGet">Letters to Get:</label>
         <span name="lettersToGet" id="lettersToGet" style="font-weight:bold;"></span>
     </main>
+
+    <footer>
+        <a href="/about">About</a>
+        <br>
+        <p>
+            Copyright (c) 2024 Daniel Van Noord 
+        </p>
+    </footer>
 </body>
 
 <script type="text/javascript">
