--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <h2>Marquee Basic Letter Finder</h2>
 
         <label for="currentMessage">Current Message:</label>
-        <textarea id="currentMessage" name="currentMessage" rows="3" style="text-align: center"></textarea><br>
+        <textarea id="currentMessage" name="currentMessage" rows="3" style="text-align: center; background: linear-gradient(rgb(128, 128, 128), rgb(128, 128, 128)) no-repeat center/1px 100%; font-family: monospace, monospace;"></textarea><br>
         <label for="newMessage">New Message:</label>
-        <textarea id="newMessage" name="newMessage" rows="3" style="text-align: center"></textarea>
+        <textarea id="newMessage" name="newMessage" rows="3" style="text-align: center; background: linear-gradient(rgb(128, 128, 128), rgb(128, 128, 128)) no-repeat center/1px 100%; font-family: monospace, monospace;"></textarea>
 
         <div class="container">
 
