--- a/index.html
+++ b/index.html
@@ -13,16 +13,80 @@
     <title>Marquee Basic Letter Finder</title>
 </head>
 
+<script type="text/javascript">
+    function loadFromUrl() {
+        const queryString = window.location.search;
+        console.log(queryString);
+
+        const urlParams = new URLSearchParams(queryString);
+
+        const currentMessage = urlParams.get('currentMessage')
+        document.getElementById("currentMessage").value = currentMessage;
+        console.log(currentMessage);
+
+        const newMessage = urlParams.get('newMessage')
+        document.getElementById("newMessage").value = newMessage;
+        console.log(newMessage);
+    }
+
+    function generateCurrentAsCurrent(button) {
+        navigator.clipboard.writeText(window.location.origin + '?currentMessage=' + encodeURIComponent(document.getElementById("currentMessage").value));
+        delaySet(button);
+    }
+
+    function generateCurrentAsNew(button) {
+        navigator.clipboard.writeText(window.location.origin + '?newMessage=' + encodeURIComponent(document.getElementById("currentMessage").value));
+        delaySet(button);
+    }
+
+    function generateNewAsCurrent(button) {
+        navigator.clipboard.writeText(window.location.origin + '?currentMessage=' + encodeURIComponent(document.getElementById("newMessage").value));
+        delaySet(button);
+    }
+
+    function generateNewAsNew(button) {
+        navigator.clipboard.writeText(window.location.origin + '?newMessage=' + encodeURIComponent(document.getElementById("newMessage").value));
+        delaySet(button);
+    }
+
+    function generateBoth(button) {
+        navigator.clipboard.writeText(window.location.origin + '?currentMessage=' + encodeURIComponent(document.getElementById("currentMessage").value) + '&newMessage=' + encodeURIComponent(document.getElementById("newMessage").value));
+        delaySet(button);
+    }
+
+    function delaySet(control, message) {
+        var text = control.value;
+
+        control.value = "Link copied";
+
+        setTimeout(function () {
+            control.value = text
+        }, 1200);
+    }
+</script>
+
 <body>
     <main class="container">
         <h2>Marquee Basic Letter Finder</h2>
 
         <label for="currentMessage">Current Message:</label>
         <textarea id="currentMessage" name="currentMessage" rows="3"
-            style="text-align: center; background: linear-gradient(rgb(128, 128, 128), rgb(128, 128, 128)) no-repeat center/1px 100%;"></textarea><br>
+            style="text-align: center; background: linear-gradient(rgb(128, 128, 128), rgb(128, 128, 128)) no-repeat center/1px 100%;"></textarea>
+        <div role="group">
+            <input type="button" value="Share as New" onclick="generateCurrentAsNew(this)">
+            <input type="button" value="Share as Current" onclick="generateCurrentAsCurrent(this)">
+            <input type="button" value="Share Both" onclick="generateBoth(this)">
+        </div>
+
         <label for="newMessage">New Message:</label>
         <textarea id="newMessage" name="newMessage" rows="3"
             style="text-align: center; background: linear-gradient(rgb(128, 128, 128), rgb(128, 128, 128)) no-repeat center/1px 100%;"></textarea>
+        <div role="group">
+            <input type="button" value="Share as New" onclick="generateNewAsNew(this)">
+            <input type="button" value="Share as Current" onclick="generateNewAsCurrent(this)">
+            <input type="button" value="Share Both" onclick="generateBoth(this)">
+        </div>
+
 
         <div class="container">
 
@@ -56,11 +120,18 @@
         <span name="lettersToGet" id="lettersToGet" style="font-weight:bold;"></span>
     </main>
 
+    <script>
+        loadFromUrl();
+    </script>
+
     <footer>
         <a href="/about">About</a>
+        <p>
+            The share buttons will copy a link to your clipboard that you can save or share. No data for this function is stored server side.
+        </p>
         <br>
         <p>
-            Copyright (c) 2024 Daniel Van Noord
+            Copyright (c) 2025 Daniel Van Noord
         </p>
     </footer>
 </body>
